# cmake-examples

08-cross-compile/gen_testbed_dst/: CMakeLists.txt  readme.txt
08-cross-compile/gen_testbed_dst/inc/: Hello.h
08-cross-compile/gen_testbed_dst/src/: test.cpp
08-cross-compile/gen_third_lib/: CMakeLists.txt  readme.txt
08-cross-compile/gen_third_lib/inc/: Hello.h
08-cross-compile/gen_third_lib/src/: Hello.cpp
08-cross-compile/gen_third_lib/toolchain/: compiler_name.cmake
